--- a/packages/solid-demo-fe/index.html
+++ b/packages/solid-demo-fe/index.html
@@ -13,4 +13,9 @@
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
+  <style>
+    body * {
+      font-family: Roboto;
+    }
+  </style>
 </html>
