Implement shopping-cart page

--- a/packages/solid-demo-fe/index.html
+++ b/packages/solid-demo-fe/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>NT Store</title>
+    <title>NTKart</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -15,7 +21,7 @@
   </body>
   <style>
     body * {
-      font-family: Roboto;
+      font-family: Lato;
     }
   </style>
 </html>
